--- a/src/index.css
+++ b/src/index.css
@@ -1,88 +1,6 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  /*  background-color: #F4F5F6 */
-  background-color: #FFF;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  color: #0E4B75;
-  padding: 0;
-  margin:10px 0;
-}
-
-p {
-  padding: 0;
-  margin: 0;
-}
-
-button {
-  background-color: #0E4B75;
-  color: #FFF;
-  font-size: 17pt;
-  min-width: 90%;
-  padding: 10px 20px;
-}
-
-input {
-  border-color: #ccc;
-  border-width: 0 0 2px 0;
-  font-size: 20px;
-  margin: 10px 0px;
-  padding: 5px 0px;
-  outline: none;
-  width:100%;
-}
-
-input:focus, textarea:focus {
-  border-color:#0E4B75;
-}
-
-input::placeholder {
-  color:#ccc;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.w-50 {
-  width: 50%;
-  display: inline-block;
-}
-
-.p-2 {
-  padding: 2px;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.block {
-  padding: 5px 10px;
-  margin: 0px 10px;
-  border: #F4F5F6 solid 0;
-  border-bottom-width: 2px;
-}
-
-.alertBlock {
-  margin: 20px;
-  padding: 20px;
-}
-
-.logo {
-  height: 100px;
-  padding: 20px;
-  margin: 0 auto;
-}
-
-.error {
-  color: red;
-  text-align: left;
+  background-color: #F4F5F6;
 }
