--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  background-color: #F4F5F6;
+  background: #0D2145;
+  background: linear-gradient( to right, #0E4B75, #0D2145);
 }
 
 html,
@@ -11,7 +12,6 @@ body,
 #root > div {
   height: 100%;
 }
-
 .h-100 {
   heigth: 100%;
 }
