--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  background: #0D2145;
+  background: #FFcc00;
   background: linear-gradient( to right, #0E4B75, #0D2145);
 }
 
